<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">galaxy08</string>
    <string name="tip_waiting">请稍候...</string>
    <string name="tip_request_failed">请求失败，请稍后再试。。。</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_message">消息</string>
    <string name="main_news">动态</string>
    <string name="main_task">任务提醒</string>
    <string name="main_contact">通讯录</string>
    <string name="main_more">更多</string>
   	<string name="search_contact">搜索消息、联系人</string>
    <string name="message_list_message">中午部门团建活动：吉祥鸟聚餐，请按时参加</string>
	<string name="network_isslow">网络差</string>
	<string name="later">请稍候</string>
	<string name="movecancel">移到这里取消</string>
	<string name="zerosecond">0 秒</string>
	<string name="loosencancel">松开取消</string>
	<string name="companyAccount">公司账号</string>
	<string name="phonenumber">手机号</string>
	<string name="password">密码</string>
	<string name="security_code">短信验证码</string>
	<string name="activate">激活账户</string>
	<string name="login_title">银河畅享</string>
	<string name="auto_login">自动登录</string>
	<string name="login">登录</string>
	<string name="input_phone_number">输入手机号</string>
	<string name="verification">获取验证码</string>
	<string name="next_step">下一步</string>
	
	<string name="no_password">您还没有设置密码</string>
	
	<string name="must_set_password">设置密码后才可以继续使用，现在设置？</string>
	
	<string name="invalid_number">手机号码无效</string>
	<string name="ok">ok</string>
	<string name="input_security_code">输入验证码</string>
	<string name="activate_account">激活账户</string>
	
	<string name="set_passwd">设置密码</string>
	<string name="confirm_password">确认密码</string>
	<string name="start_use">保存设置，开始使用</string>
	
	<string name="no_null">不能为空</string>
	<string name="different">两次输入不同</string>
	<string name="miss_parameters">缺少参数</string>
	<string name="invalid_phone_number">手机号码不合法</string>
	<string name="already_exist">用户已经存在</string>
	<string name="invalid_passwd">密码格式不合法</string>
	<string name="security_code_error">验证码错误</string>
	
	<string name="unknow_error">未知错误</string>
	<string name="http_error">网络错误</string>
	<string name="wait_for_register">正在注册，请稍后</string>
	
	<!-- 动态 -->
	<string name="push_feed">发动态</string>
	<string name="push_feed_hint">想说点什么...</string>
	<string name="sync_sns">同步到新浪微博</string>
	
	<!-- 联系人 -->
	<string name="add_attention">加关注</string>
	<string name="cancel_attention">取消关注</string>
	
	<!-- 更多 -->
	<string name="my_info">我的信息</string>
	<string name="other_info">的信息</string>
	
	<!-- 群聊 -->
	<string name="group_name">群组名称</string>
	<string name="group">群组</string>
	<string name="default_name">默认名称</string>
	
	<!-- 聊天 -->
	<string name="no_time">现在忙碌，稍后联系你</string>
	<string name="i_konow">我知道了</string>
	
	<!-- 通用 -->
	<string name="sure">确定</string>
	<string name="no_content">内容为空</string>
	<string name="nosdcard">请检查SD卡是否存在</string>
	<string name="logout">注销登录</string>
	
	
	<!-- 例子 -->
	<string name="address_text_example">中国国际展览中心</string>
	
</resources>