<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:orientation="vertical" >
    
   <FrameLayout 
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@drawable/login_top_back"
       
       >
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/login_title"
           android:textColor="#FFFFFF"
           android:layout_gravity="center"
           android:textSize="18sp"
           />
       <Button 
           android:layout_width="wrap_content"
           android:layout_height="35dp"
           android:layout_marginRight="5dp"
           android:background="@drawable/register_button_back"
           android:text="@string/activate"
           android:textSize="14sp"
           android:textColor="#FFFFFF"
           android:layout_gravity="right|center_vertical"
           android:id="@+id/user_login_activate_button"
           />
   </FrameLayout>
   
   <LinearLayout 
       android:layout_margin="10dp"
       android:layout_width="match_parent"
       android:layout_height="150dp"
       android:background="@drawable/login_info_back01"
       android:orientation="vertical"
       >
       <EditText 
           android:layout_marginLeft="10dp"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1.0"
           android:hint="@string/companyAccount"
           android:background="@null"
           android:layout_gravity="center"
           android:gravity="center_vertical"
           android:id="@+id/user_login_company_account_edit"
           />
       <TextView 
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="#EFEFEF"
           />
       <EditText 
           android:layout_marginLeft="10dp"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1.0"
           android:hint="@string/phonenumber"
           android:background="@null"
           android:inputType="phone"
           android:layout_gravity="center"
           android:id="@+id/user_login_phone_number_edit"
           />
       <TextView 
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="#EFEFEF"
           />
       <EditText 
           android:layout_marginLeft="10dp"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1.0"
           android:hint="@string/password"
           android:background="@null"
           android:layout_gravity="center"
           android:id="@+id/user_login_password_edit"
           android:inputType="textPassword"
           />
   </LinearLayout>
   
   <CheckBox 
       android:layout_marginLeft="13dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/auto_login"
       android:textColor="@color/blue_auto_login_text"
       style="@style/login_checkbox"
       android:drawableLeft="@drawable/auto_login_checkbox"
       android:id="@+id/user_login_auto_login_checkbox"
       />
   
   <Button 
       android:layout_width="match_parent"
       android:layout_height="45dp"
       android:background="@drawable/login_button_back"
       android:text="@string/login"
       android:textSize="18sp"
       android:textColor="@color/white"
       android:layout_margin="10dp"
       android:id="@+id/user_login_button"
       />

</LinearLayout>