<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_top_back" >

        <Button
            android:id="@+id/activate3_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/activate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activate"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/login_info_back01"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/activate3_set_passwd_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/set_passwd"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EFEFEF" />

        <EditText
            android:id="@+id/activate3_confirm_passwd_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/activate3_start_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/login_button_back"
        android:text="@string/start_use"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>