<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_top_back" >

        <Button
            android:id="@+id/activate_back_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/activate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activate"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </FrameLayout>

    <!--
         <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activate_phone_number"
        android:layout_margin="20dp"
        android:hint="@string/input_phone_number"
        android:paddingLeft="10dp"
        android:id="@+id/activate_phone_number_edit"
        android:inputType="phone"
        />
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:background="@drawable/login_info_back01"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/activate_company_account_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/companyAccount"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EFEFEF" />

        <EditText
            android:id="@+id/activate_mobile_number_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/phonenumber"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EFEFEF" />

        <EditText
            android:id="@+id/activate_sercurity_code_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/security_code"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/activate_next_step_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/login_button_back"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>